--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   main-work:
-    runs-on: spartan-4
+    runs-on: hw-3
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
