--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,4 @@ jobs:
           username: hoplite
           password: 123
           command: |
-            bash check-submission.sh all
-            bash test-submission.sh all
+            bash check-submission.sh all && bash test-submission.sh all
